# auto-driving-sim-evaluation

./: .gitignore  CMakeLists.txt  README.md
docs/: interview_notes.md
include/: Controller.h  LeadVehicle.h  Logger.h  Vehicle.h
scripts/: analyze_log.py
src/: Controller.cpp  LeadVehicle.cpp  Logger.cpp  Vehicle.cpp  main.cpp
